--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,7 @@
     "requirejs": "~2.1.10",
     "requirejs-text": "~2.0.10",
     "modernizr": "~2.7.1",
-    "lateralus": "ssh://git@stash.jellyvision.com:7999/frame/lateralus.git",
+    "lateralus": "~0.0.5",
     "marked": "~0.3.2",
     "codemirror": "~4.7.0"
   },
