--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "load-grunt-tasks": "~0.3.0",
     "connect-livereload": "~0.3.2",
     "time-grunt": "~0.2.8",
-    "jshint-stylish": "~0.1.5"
+    "jshint-stylish": "~0.1.5",
+    "grunt-bump": "0.0.16"
   },
   "engines": {
     "node": ">=0.10.0"
